# mcpsquared-discovery

./: .cursorrules  .env.example  .gitignore  Dockerfie  Dockerfile  README.md  docker-compose.yaml  main.py  porter.yaml  pyproject.toml
.github/workflows/: porter_app_mcpsquared-discovery_4355.yml
project-docs/: project-background.md  project-spec.mdc  project-structure.mdc
src/mcpsquared_discovery/: main.py
src/mcpsquared_discovery/api/: routes.py
src/mcpsquared_discovery/core/: config.py  logging.py
src/mcpsquared_discovery/data/: mcp_resources.md  mcp_servers.json
src/mcpsquared_discovery/models/: schemas.py
src/mcpsquared_discovery/prompts/: content_generation.py  query_generation.py  result_selection.py
src/mcpsquared_discovery/services/: analyzer.py  content_retrieval.py  llm.py  search.py
